Stub out a delete confirmation page; #664

--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -97,6 +97,12 @@
     <!-- Connected Accounts -->
     {% include "connected-accounts.html" %}
 
+
+    <!-- Delete! -->
+    <h2>Delete Account</h2>
+
+    <a href="delete.html"><button>Delete</button></a>
+
 </div>
 <div class="clear"></div>
 
