Change first step from a button to a link; #664
Deleting an account is of course a big deal and shouldn't be too easy to
do. Leading with a button makes it feel too available as an option.
Linking to a page with more info is better.

--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -99,9 +99,9 @@
 
 
     <!-- Delete! -->
-    <h2>Delete Account</h2>
+    <h2>Delete Entire Account</h2>
 
-    <a href="delete.html"><button>Delete</button></a>
+    <p><a href="delete.html">Read about</a> deleting your account.</p>
 
 </div>
 <div class="clear"></div>
