Rename "delete" to "deactivate"; #54
Inspired by Twitter, I'm going with "deactivate" instead of "delete,"
because this more accurately reflects what we're actually going to do
when they click The Button. We aren't going to actually delete data
until further down the road.

--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -99,9 +99,9 @@
 
 
     <!-- Delete! -->
-    <h2>Delete Entire Account</h2>
+    <h2>Deactivate Your Account(!)</h2>
 
-    <p><a href="delete.html">Read about</a> deleting your account.</p>
+    <p><a href="deactivate.html">Read about</a> deactivating your account.</p>
 
 </div>
 <div class="clear"></div>
