--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -98,7 +98,7 @@
     {% include "connected-accounts.html" %}
 
 
-    <!-- Delete! -->
+    <!-- Deactivate! -->
     <h2>Deactivate Your Account(!)</h2>
 
     <p><a href="deactivate.html">Read about</a> deactivating your account.</p>
