--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -99,7 +99,7 @@
 
 
     <!-- Deactivate! -->
-    <h2>Deactivate Your Account(!)</h2>
+    <h2>Deactivate</h2>
 
     <p><a href="deactivate.html">Read about</a> deactivating your account.</p>
 
